# remote_buttons

./: .gitignore  AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.devcontainer/: devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  hacs.yml  hassfest.yml  release.yml  tests.yml
custom_components/remote_buttons/: __init__.py  button.py  config_flow.py  const.py  diagnostics.py  icons.json  manifest.json  number.py  repairs.py  storage.py  strings.json
custom_components/remote_buttons/translations/: de.json  en.json  es.json  fr.json
tests/: conftest.py  test_button.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_number.py  test_repairs.py  test_storage.py
